...
            android:layout_height="wrap_content"
            android:text="Search Public Directory:"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_directory"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:background="@drawable/directory_edittext_border"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:hint="Search"
...
        </LinearLayout>

        <ListView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/lv_directory"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>
</FrameLayout>
