...
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_news_feed">News</string>
    <string name="title_mensa">Mensa</string>
    <string name="title_map">Map</string>
    <string name="title_directory">Directory</string>
    <string name="title_more">More</string>

    <string name="email_subject"></string>

...
