<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/map_filter_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>


    <RadioGroup
        android:id="@+id/map_radio_group"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_saar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saarbrücken Campus"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:layout_marginTop="5dp"
            android:id="@+id/radio_homburg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Homburg Campus"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</LinearLayout>